Added path for projects/offical

--- a/app/views/static_pages/_vital_stats.html.haml
+++ b/app/views/static_pages/_vital_stats.html.haml
@@ -20,7 +20,7 @@
     %span
       Chinese
     %strong><
-      %a{href: "/projects?scope_names[]=Official Finance"}><
+      %a{href: "/projects/official"}><
         official finance projects
     , 2000-2011:
     %span.official#count.text-success
