moved loan detail to another page where it can be saved.  This enforces correct dependencies for calculating values

--- a/app/views/projects/_project_form.html.haml
+++ b/app/views/projects/_project_form.html.haml
@@ -75,22 +75,24 @@
                     = f.input :end_planned, @date_defaults
                     = f.input :end_actual, @date_defaults
 
+            // This is hidden so the loan_detail record will be saved with the rest of the project data
+            // On the next page (project_form2), the data is actually input and the record is updated.
             .row-fluid
               #project-form-loan-detail
                 = f.simple_fields_for :loan_detail do |loan_detail_form|
-                  = loan_detail_form.association :loan_type,wrapper_html: {class: "span2"} 
-                  = loan_detail_form.input :interest_rate,wrapper_html: {class: "span2"}, hint: "In %" 
-                  = loan_detail_form.input :grant_element,wrapper_html: {class: "span2"}, hint: "In %." 
-                  = loan_detail_form.input :grace_period,wrapper_html: {class: "span2"}, hint: "Years until first payment." 
-                  = loan_detail_form.input :maturity,wrapper_html: {class: "span2"}, hint: "Years until final payment." 
-                  %span.muted.span2 
-                    The grant element will be 
-                    %a{target: '_blank', href: 'http://aiddata-loan-calculator.herokuapp.com'}
-                      calculated automatically
-                    if 
-                    %strong
-                      maturity, interest rate, and transaction value 
-                    are present.
+                  = loan_detail_form.association :loan_type,wrapper_html: {hidden: "true"}
+                  = loan_detail_form.hidden_field :interest_rate,wrapper_html: {class: "span2"}, hint: "In %"
+                  = loan_detail_form.hidden_field :grant_element,wrapper_html: {class: "span2"}, hint: "In %."
+                  = loan_detail_form.hidden_field :grace_period,wrapper_html: {class: "span2"}, hint: "Years until first payment."
+                  = loan_detail_form.hidden_field :maturity,wrapper_html: {class: "span2"}, hint: "Years until final payment."
+            /      %span.muted.span2
+            /        The grant element will be
+            /        %a{target: '_blank', href: 'http://aiddata-loan-calculator.herokuapp.com'}
+            /          calculated automatically
+            /        if
+            /        %strong
+            /          maturity, interest rate, and transaction value
+            /        are present.
       / .row-fluid
 
       /   #project-form-sources.span5.project-accessory-fields
