--- a/app/views/loan_details/edit.html.erb
+++ b/app/views/loan_details/edit.html.erb
@@ -1,6 +1,4 @@
 <h1>Editing loan_detail</h1>
 
-<%= render 'form' %>
+<%= render 'edit_form' %>
 
-<%= link_to 'Show', @loan_detail %> |
-<%= link_to 'Back', loan_details_path %>
