file uploader uploads files to the server

--- a/app/views/projects/_project.html.erb
+++ b/app/views/projects/_project.html.erb
@@ -60,7 +60,8 @@
     </div>
   </div>
   <div class="span4" >
-    <%= render 'project_files' %>
+  <!--  <%= render 'project_files' %> -->
+    <%= render 'media_items/media_upload_form' %>
   </div>
   
 </div>
