--- a/app/views/media_items/_media_upload_form.html.erb
+++ b/app/views/media_items/_media_upload_form.html.erb
@@ -40,12 +40,19 @@
   </script>
   -->
   <h3>Files:</h3>
+  <% @project.get_downloadable_media_items.each do |media_item| %>
+      <p>
+        <%= link_to media_item.media_file_name, media_item.media.url %>
+      </p>
+  <% end %>
 
-  <% if current_user_is_aiddata %>
-    <% @project.get_media_items.each do |media_item| %>
+  <% if current_user %>
+    <% @project.get_all_media_items.each do |media_item| %>
       <p>
       <%= link_to media_item.media_file_name, media_item.media.url %>
-      <a class='btn btn-small btn-danger' data-method='delete' href='/projects/<%= @project.id %>/media_items/<%=media_item.id %>'>DELETE!</a>
+      <% if current_user_is_aiddata %>
+         <a class='btn btn-small btn-danger' data-method='delete' href='/projects/<%= @project.id %>/media_items/<%=media_item.id %>'>DELETE!</a>
+      <% end %>
       </p>
     <% end %>
   <% end %>
@@ -54,6 +61,7 @@
   <% if current_user %>
       <%= form_tag "#{project_path @project}/media_items", :multipart => true, onsubmit: "return confirm_terms_and_conditions(this)" do %>
          <%= file_field_tag "media" %>
+         <%= hidden_field_tag( "user_id", current_user[:id]) %>
           <%= submit_tag 'Add file', class: "btn btn-info" %>
           <div class='row-fluid'>
             <input style='display:inline;' type='checkbox' required="true" id='terms_and_conditions'/>
