--- a/app/views/media_items/_media_upload_form.html.erb
+++ b/app/views/media_items/_media_upload_form.html.erb
@@ -46,7 +46,8 @@
       </p>
   <% end %>
 
-  <% if current_user %>
+ <!-- this code allows aiddata users to see and delete all media files that have been uploaded for the project
+  <% if current_user_is_aiddata %>
     <% @project.get_all_media_items.each do |media_item| %>
       <p>
       <%= link_to media_item.media_file_name, media_item.media.url %>
@@ -56,7 +57,7 @@
       </p>
     <% end %>
   <% end %>
-
+   -->
   <h3>Upload:</h3>
   <% if current_user %>
       <%= form_tag "#{project_path @project}/media_items", :multipart => true, onsubmit: "return confirm_terms_and_conditions(this)" do %>
@@ -74,6 +75,7 @@
       <h3>Video:</h3>
       <%= form_tag "#{project_path @project}/media_items", :multipart => true do %>
           <%= text_field_tag "url" %>
+          <%= hidden_field_tag( "user_id", current_user[:id]) %>
           <%= submit_tag 'Share Video', class: "btn btn-info" %>
       <% end %>
 
