--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -11,4 +11,5 @@
  * compiled file, but it's generally better to create a new file per style scope.
  *= require_self
  *= require_tree .
+ *= require flexslider.css
  */
