--- a/app/views/media_items/_media_upload_form.html.erb
+++ b/app/views/media_items/_media_upload_form.html.erb
@@ -1,4 +1,25 @@
 <div class='well well-small'>
+  <style>
+      .flexslider {
+          width: 540px;
+          height: 350px;
+
+      }
+      .flexslider .frame {
+          text-align: center;
+          height: 350px;
+
+
+      }
+      .flexslider .frame img {
+          width:auto;
+          height: auto;
+          max-width: 100%;
+          max-height: 100%;
+          display: inline-block;
+
+      }
+  </style>
 
   <!-- Old code, its not needed anymore, but will keep until branch feature is complete --Aba
   <script>
@@ -44,10 +65,15 @@
   <!-- Place somewhere in the <body> of your page -->
   <div class="flexslider">
     <ul class="slides">
+
       <% @project.get_publishable_media_items.each do |media_item| %>
+
           <li>
+            <div class="frame">
             <%= image_tag media_item.media.url %>
+            </div>
           </li>
+
       <% end %>
     </ul>
   </div>
@@ -108,6 +134,9 @@
     $(window).load(function() {
         $('.flexslider').flexslider({
             animation: "slide"
+
         });
     });
+
+
 </script>
