--- a/app/views/media_items/_media_upload_form.html.erb
+++ b/app/views/media_items/_media_upload_form.html.erb
@@ -3,15 +3,22 @@
       .flexslider {
           width: 540px;
           height: 350px;
+          vertical-align: middle;
 
       }
       .flexslider .frame {
-          text-align: center;
-          height: 350px;
-
+          width: 100%;
+          height: 100%;
+          display: inline-block;
 
       }
-      .flexslider .frame img {
+      .flexslider .frame .vert_frame {
+          text-align: center;
+          width: 100%;
+          display: inline-block;
+
+      }
+      .flexslider .frame .vert_frame img {
           width:auto;
           height: auto;
           max-width: 100%;
@@ -70,9 +77,12 @@
 
           <li>
             <div class="frame">
-            <%= image_tag media_item.media.url %>
+                <div class="vert_frame">
+                    <%= image_tag media_item.media.url %>
+                </div>
             </div>
           </li>
+
 
       <% end %>
     </ul>
