--- a/app/views/media_items/_media_upload_form.html.erb
+++ b/app/views/media_items/_media_upload_form.html.erb
@@ -3,28 +3,18 @@
       .flexslider {
           width: 540px;
           height: 350px;
-          vertical-align: middle;
-
       }
       .flexslider .frame {
-          width: 100%;
-          height: 100%;
-          display: inline-block;
-
-      }
-      .flexslider .frame .vert_frame {
           text-align: center;
           width: 100%;
-          display: inline-block;
 
       }
-      .flexslider .frame .vert_frame img {
+      .flexslider .frame  img {
           width:auto;
-          height: auto;
+          height: 350px;
           max-width: 100%;
           max-height: 100%;
           display: inline-block;
-
       }
   </style>
 
@@ -77,9 +67,7 @@
 
           <li>
             <div class="frame">
-                <div class="vert_frame">
                     <%= image_tag media_item.media.url %>
-                </div>
             </div>
           </li>
 
