added defualt image if no images have been published for the project

--- a/app/views/media_items/_media_upload_form.html.erb
+++ b/app/views/media_items/_media_upload_form.html.erb
@@ -63,8 +63,7 @@
 
   <div class="flexslider">
     <ul class="slides">
-
-      <% @project.get_publishable_media_items.each do |media_item| %>
+      <% if @project.get_publishable_media_items.each do |media_item| %>
 
           <li>
             <div class="frame">
@@ -76,6 +75,9 @@
             </div>
           </li>
 
+
+      <% end.empty? %>
+         <%= image_tag('adt.png')%>
 
       <% end %>
     </ul>
