--- a/app/views/media_items/_media_upload_form.html.erb
+++ b/app/views/media_items/_media_upload_form.html.erb
@@ -67,7 +67,7 @@
 
           <li>
             <div class="frame">
-              <% if media_item.media_content_type == 'youtube' %>
+              <% if media_item.media_type == 'youtube' %>
                   <%= raw(media_item.youtube_embed(media_item.url)) %>
               <% else %>
                   <%= image_tag media_item.media.url %>
@@ -104,27 +104,34 @@
    -->
 
 
-  <h3>Upload:</h3>
-  <% if current_user %>
-      <%= form_tag "#{project_path @project}/media_items", :multipart => true, onsubmit: "return confirm_terms_and_conditions(this)" do %>
+  <div class= "row-fluid">
+  <div class= "span4"><%= link_to  "<h3>Upload a File</h3>".html_safe, '#upload_file', { 'data-toggle' => 'modal', 'data-target' => "#upload_file"}%></div>
+  <div class= "span4"><%= link_to  "<h3>Share a Video</h3>".html_safe, '#share_video', { 'data-toggle' => 'modal', 'data-target' => "#share_video"}%></div>
+  </div>
+
+  <div id="upload_file" class="modal hide fade in" style="display: none;">
+      <% if current_user %>
+         <%= form_tag "#{project_path @project}/media_items", :multipart => true, onsubmit: "return confirm_terms_and_conditions(this)" do %>
          <%= file_field_tag "media" %>
          <%= hidden_field_tag( "user_id", current_user[:id]) %>
-          <%= submit_tag 'Add file', class: "btn btn-info" %>
-          <div class='row-fluid'>
+         <%= submit_tag 'Add file', class: "btn btn-info" %>
+         <div class='row-fluid'>
             <input style='display:inline;' type='checkbox' required="true" id='terms_and_conditions'/>
             <label style='display:inline;'>
               I accept the <%= link_to "terms and conditions", "http://www.aiddata.org/content/index/about/terms-conditions" %>.
             </label>
-          </div>
+         </div>
       <% end %>
+  </div>
 
-      <h3>Video:</h3>
+  <div id="share_video" class="modal hide fade in" style="display: none;">
       <%= form_tag "#{project_path @project}/media_items", :multipart => true do %>
           <%= text_field_tag "url" %>
           <%= hidden_field_tag( "user_id", current_user[:id]) %>
           <%= hidden_field_tag( "video", "youtube") %>
           <%= submit_tag 'Share Video', class: "btn btn-info" %>
       <% end %>
+  </div>
 
   <% else %>
       <p><i> Please
