--- a/app/views/media_items/_media_upload_form.html.erb
+++ b/app/views/media_items/_media_upload_form.html.erb
@@ -130,7 +130,7 @@
 
 
   <div id="upload_file" class="modal hide fade in" style="text-align:center;">
-    <h3>Upload a File:</h3>
+    <h3>Upload a File</h3>
       <% if current_user %>
          <%= form_tag "#{project_path @project}/media_items", :multipart => true, onsubmit: "return confirm_terms_and_conditions(this)" do %>
          <%= file_field_tag "media" %>
@@ -146,7 +146,8 @@
   </div>
 
   <div id="share_video" class="modal hide fade in" style="text-align:center;">
-      <h3>Share a Video:</h3>
+      <h3>Share a Video</h3>
+      <p>Enter url here:</p>
       <%= form_tag "#{project_path @project}/media_items", :multipart => true do %>
           <%= text_field_tag "url" %>
           <%= hidden_field_tag( "user_id", current_user[:id]) %>
