--- a/app/views/projects/_project.html.erb
+++ b/app/views/projects/_project.html.erb
@@ -57,8 +57,57 @@
         <%= render partial: 'project_detail', locals: {container_tag: "li", class_name: "LineOfCredit", heading: "Line of Credit"} %>     
         <%= render partial: 'project_detail', locals: {container_tag: "li", class_name: "IsCofinanced", heading: "Is Cofinanced"} %>
       </ul>
+
     </div>
+    <div class="row-fluid">
+
+        <div class="span4">
+          <h4>Dates:</h4>
+          <ul class='unstyled'>
+            <%= render partial: 'project_detail', locals: {container_tag: "li",
+                                                           class_name: "StartPlanned", heading: "Start (Planned)"} %>
+
+            <%= render partial: 'project_detail', locals: {container_tag: "li",
+                                                           class_name: "StartActual", heading: "Start (Actual)"} %>
+
+            <%= render partial: 'project_detail', locals: {container_tag: "li",
+                                                           class_name: "EndPlanned", heading: "End (Planned)"} %>
+
+            <%= render partial: 'project_detail', locals: {container_tag: "li",
+                                                           class_name: "EndActual", heading: "End (Actual)"} %>
+          </ul>
+        </div>
+
+        <div class='span4'>
+          <h4>Loan Details:</h4>
+          <ul class='unstyled'>
+            <%= render partial: 'project_detail', locals: {container_tag: "li",
+                                                           class_name: "LoanType", heading: "Loan Type"} %>
+
+            <%= render partial: 'project_detail', locals: {container_tag: "li",
+                                                           class_name: "InterestRate", heading: "Interest Rate",
+                                                           units: :percentage } %>
+
+            <%= render partial: 'project_detail', locals: {container_tag: "li",
+                                                           class_name: "Maturity", heading: "Maturity",
+                                                           units: :years} %>
+
+            <%= render partial: 'project_detail', locals: {container_tag: "li",
+                                                           class_name: "GracePeriod", heading: "Grace Period", units: :years} %>
+
+            <%= render partial: 'project_detail', locals: {container_tag: "li",
+                                                           class_name: "GrantElement", heading: "Grant Element",
+                                                           units: :percentage } %>
+          </ul>
+        </div>
+      <div class='span4'>
+        <h4>Transactions:</h4>
+        <%= render 'project_transactions' %>
+      </div>
+    </div>
+
   </div>
+
   <div class="span6" >
   <!--  <%= render 'project_files' %> -->
     <%= render 'media_items/media_upload_form' %>
@@ -66,73 +115,29 @@
   
 </div>
 
-
-
 <div class="row-fluid">
   <h4>Description:</h4>
   <ul class='unstyled'>
     <%= render partial: "project_detail", locals: {container_tag: "li", class_name: "Description", heading: ""} %>
     <%= render partial: "project_detail", locals: {container_tag: "li", class_name: "Capacity", heading: "Capacity" } %>
-  <ul>
+    <ul>
 </div>
 
-
 <div class="row-fluid">
-  <div class="span3">
+  <div class="span6">
     <h4>Participating Organizations:</h4>
     <%= render 'project_participating_organizations' %>
   </div>
-  <div class="span3">
+  <div class="span6">
     <h4> Contacts:</h4>
       <%= render 'project_contacts' %>
   </div>
-  <div class="span3">
-    <h4>Dates:</h4>
-    <ul class='unstyled'>
-        <%= render partial: 'project_detail', locals: {container_tag: "li",
-          class_name: "StartPlanned", heading: "Start (Planned)"} %>
 
-        <%= render partial: 'project_detail', locals: {container_tag: "li", 
-          class_name: "StartActual", heading: "Start (Actual)"} %>
-
-        <%= render partial: 'project_detail', locals: {container_tag: "li", 
-          class_name: "EndPlanned", heading: "End (Planned)"} %>
-
-        <%= render partial: 'project_detail', locals: {container_tag: "li", 
-          class_name: "EndActual", heading: "End (Actual)"} %>
-    </ul>
-  </div>
-  <div class='span3'>
-      <h4>Loan Details:</h4>
-      <ul class='unstyled'>
-        <%= render partial: 'project_detail', locals: {container_tag: "li",
-          class_name: "LoanType", heading: "Loan Type"} %>
-
-        <%= render partial: 'project_detail', locals: {container_tag: "li",
-          class_name: "InterestRate", heading: "Interest Rate",
-          units: :percentage } %>
-
-        <%= render partial: 'project_detail', locals: {container_tag: "li",
-          class_name: "Maturity", heading: "Maturity",
-          units: :years} %>
-
-        <%= render partial: 'project_detail', locals: {container_tag: "li",
-          class_name: "GracePeriod", heading: "Grace Period", units: :years} %>
-
-        <%= render partial: 'project_detail', locals: {container_tag: "li",
-          class_name: "GrantElement", heading: "Grant Element",
-          units: :percentage } %>
-      </ul>
-  </div>
 </div>
 
 
 <div class='row-fluid'>
   <div class="span6">
-    <div class='row-fluid'>
-      <h4>Transactions:</h4>
-      <%= render 'project_transactions' %>
-    </div>
     <div class='row-fluid'>
       <%= render 'project_resources' %>
       <% if current_user_is_aiddata %>
