--- a/app/views/media_items/_media_upload_form.html.erb
+++ b/app/views/media_items/_media_upload_form.html.erb
@@ -17,7 +17,17 @@
           max-width: 100%;
           max-height: 100%;
           display: inline-block;
+
       }
+
+      .flex-direction-nav a:before  {
+          font-family: "flexslider-icon";
+          font-size: 40px;
+          line-height: 40px;
+          display: inline-block;
+          content: '\f001';
+      }
+
   </style>
 
   <!-- Old code, its not needed anymore, but will keep until branch feature is complete --Aba
@@ -170,7 +180,6 @@
     $(window).load(function() {
         $('.flexslider').flexslider({
             animation: "slide"
-
         });
     });
 </script>
